--- a/indexg.html
+++ b/indexg.html
@@ -192,7 +192,9 @@
 </div>
 
     <footer>
-        Copyright &copy; SwastikFitness.com | All rights reserved
+        <p2 class="py-2"><span style="color: red; font-weight: bold; opacity: 0.5;">©</span> 2024
+            <span style="letter-spacing: 2px; font-weight: bold;">Copyright SwastikFitness.com | All rights reserved</span>
+        </p2>
     </footer>
     
     <script src="gym3.js"></script>
